tests/files/type_checker_tests/should_pass/227.cmdr
//Test that functions type check
fn add(): int { return 3 + 4; }
add();
x = add();
