tests/files/type_checker_tests/should_fail/056.cmdr
//Should fail if variable already exists
alias x = ls;
fn foo(x: int): int {
    return x;
}
